--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...   
-      - echo Building the Docker image...   
-      - docker build -t $REPOSITORY_URI:latest .
+      - docker build -t kta .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
